--- a/index.html
+++ b/index.html
@@ -3,9 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>meu portifolio</title>
 </head>
+    
 <body>
+  <img src="img/avatar-perfil.png" alt="avatar do bk" srcset="" />
+    <p>Eu sou o "BK"_</p>
+  <h1>Eu Sou cantor</h1>
+    <p>
+    Sou cantor cujo nome real é Abebe Bikila Costa Santos, 
+    um rapper, escritor e compositor brasileiro.
+    minhas carreira começou em 2016 com o álbum de estreia 
+    "Castelos & Ruínas", seguido de "Gigantes" (2018),
+    "O Líder em Movimento" (2020) e "ICARUS" 
+    (2022), consolidando-o como um dos principais nomes do rap nacional. 
+    Além dos álbuns, lançei diversos EPs e participei de projetos colaborativos. 
+     </p>
+    <p>Minhas habilidades</p>
+    <div>
+    <p>rimas</p>
+    <p>composições</p>
+    <p>cantar</p>
+    <p>feats</p>
+  </div>
+</body>
     
 </body>
 </html>
